{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerOne",
            "id": "3dd5e31d-1a74-413c-9ffe-b9ee42a4107b",
            "actions": [
                {
                    "name": "MoveHorizontal",
                    "type": "Value",
                    "id": "52a9ed5c-eddc-42c8-b310-6b771804d86b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "BoostHorizontal",
                    "type": "Value",
                    "id": "93c378ef-4184-4a7f-8df7-0e1a35c854aa",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "MultiTap(tapDelay=0.1)",
                    "initialStateCheck": true
                },
                {
                    "name": "BoostVertical",
                    "type": "Button",
                    "id": "9c1313e5-90eb-4601-bc79-d27eee8b5e62",
                    "expectedControlType": "Button",
                    "processors": "Invert",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateFigure",
                    "type": "Button",
                    "id": "39f5e7cd-370c-4ecb-b0f1-196214a6ff7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "71768860-84ae-48f0-8e58-3c0e49c07a33",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "BoostVertical",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "535336f4-7351-4dad-a966-d585418e5525",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RotateFigure",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "09fe8e82-b328-4092-81ab-f908cb35ff9f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "829b26aa-275a-4dff-81c4-0527dd3a44fd",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b1d1d0c5-b468-4009-86ff-3d7f1bfdbd32",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "c70acac4-a4c4-40f4-9851-2ec512245c7b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BoostHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c172831a-05f0-418a-931e-a882fa991e87",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "BoostHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "927aa51e-8e14-4bfa-9145-e949c60eb676",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "BoostHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}